--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,12 @@
 name: Deploy Docker Image
 
 on:
-  push:
+  pull_request:
     branches:
       - 'master'
       - 'main'
+  push:
+    branches:
       - 'rc/**'
 
 jobs:
