deploy only when pr close and merge event

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'master'
       - 'main'
+    types: [closed]
   push:
     branches:
       - 'rc/**'
@@ -12,6 +13,7 @@ on:
 jobs:
   build-and-deploy:
     uses: valitydev/java-workflow/.github/workflows/maven-service-deploy.yml@v3
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
       mm-webhook-url: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
