--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,16 @@
 name: Deploy Docker Image
 
 on:
-  pull_request:
+  push:
     branches:
       - 'master'
       - 'main'
-    types: [closed]
-  push:
-    branches:
+      - 'epic/**'
       - 'rc/**'
 
 jobs:
   build-and-deploy:
     uses: valitydev/java-workflow/.github/workflows/maven-service-deploy.yml@v3
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
       mm-webhook-url: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
